# brainbit_pc

./: .gitignore  README.md  data_loading.ipynb
android/brainbit/: build.gradle  settings.gradle
android/brainbit/app/: build.gradle
android/brainbit/gradle/wrapper/: gradle-wrapper.properties
android/callibri/app/: build.gradle
cpp/brainbit/: CMakeLists.txt
cpp/brainbit/sample/: CMakeLists.txt
cpp/brainbit/sample/brainbit/: brainbit.cpp  brainbit_callback.cpp  brainbit_em_st_artifacts.cpp  brainbit_spectrum.cpp
cpp/brainbit/sample/brainbit/include/: connectionCallback.h  resistCallback.h  signalCallback.h  signalCallback_em_st_artifacts.h  signalCallback_filters.h  signalCallback_spectrum.h
cpp/brainbit/sample/em_st_artifacts/: mathLib.cpp
cpp/brainbit/sample/em_st_artifacts/include/: mathLib.h
cpp/brainbit/sample/filters/: CMakeLists.txt  filtersLib.cpp
cpp/brainbit/sample/filters/include/: filtersLib.h
cpp/brainbit/sample/log/include/: log.h
cpp/brainbit/sample/main/: CMakeLists.txt  main.cpp  main_brainbit.cpp  main_brainbit_em_st_artifacts.cpp  main_brainbit_filters.cpp  main_brainbit_spectrum.cpp  main_scanner.cpp
cpp/brainbit/sample/main/include/: main_brainbit.h  main_brainbit_em_st_artifacts.h  main_brainbit_filters.h  main_brainbit_spectrum.h
cpp/brainbit/sample/scanner/: scanner.cpp
cpp/brainbit/sample/scanner/include/: scanner.h  sensorsCallback.h
cpp/brainbit/sample/spectrum/: CMakeLists.txt  spectrumLib.cpp
cpp/brainbit/sample/spectrum/include/: spectrumLib.h
cpp/callibri/: CMakeLists.txt
cpp/callibri/sample/: CMakeLists.txt
cpp/callibri/sample/callibri/: CMakeLists.txt  callibri.cpp  callibri_callback.cpp  callibri_ecg.cpp  callibri_em_st_artifacts.cpp  callibri_filters.cpp  callibri_info.cpp  callibri_settings.cpp  callibri_spectrum.cpp  callibri_supported_functional.cpp
cpp/callibri/sample/callibri/include/: batteryCallback.h  callibri.h  connectionCallback.h  electrodeStateCallback.h  envelopeDataCallback.h  memsDataCallback.h  quaternionDataCallback.h  respirationCallback.h  signalCallback.h  signalCallback_ecg.h  signalCallback_em_st_artifacts.h  signalCallback_filters.h  signalCallback_spectrum.h
cpp/callibri/sample/callibri_ecg/: CMakeLists.txt  callibriMathLib.cpp
cpp/callibri/sample/callibri_ecg/include/: callibriMathLib.h
cpp/callibri/sample/em_st_artifacts/: CMakeLists.txt  mathLib.cpp
cpp/callibri/sample/em_st_artifacts/include/: mathLib.h
cpp/callibri/sample/filters/: filtersLib.cpp
cpp/callibri/sample/filters/include/: filtersLib.h
cpp/callibri/sample/log/: CMakeLists.txt
cpp/callibri/sample/log/include/: log.h
cpp/callibri/sample/main/: CMakeLists.txt  main.cpp  main_callibri.cpp  main_callibri_ecg.cpp  main_callibri_em_st_artifacts.cpp  main_callibri_filters.cpp  main_callibri_spectrum.cpp  main_scanner.cpp
cpp/callibri/sample/main/include/: main_callibri.h  main_callibri_ecg.h  main_callibri_em_st_artifacts.h  main_callibri_filters.h  main_callibri_spectrum.h  main_scanner.h
cpp/callibri/sample/scanner/: CMakeLists.txt  scanner.cpp
cpp/callibri/sample/scanner/include/: scanner.h
cpp/callibri/sample/spectrum/: spectrumLib.cpp
cpp/callibri/sample/spectrum/include/: spectrumLib.h
cpp/libs/artifacts/: artifacts-x64.lib  artifacts-x86.lib
cpp/libs/em_st_artifacts/: em_st_artifacts-x64.lib  em_st_artifacts-x86.lib
cpp/libs/filters/x64/: filters.lib
cpp/libs/spectrum/: spectrumlib-x64.lib
csharp/BrainBit/: BrainBitDemo.sln
csharp/BrainBit/BrainBitDemo/: BrainBitDemo.csproj  Program.cs
csharp/Callibri/: CallibriDemo.sln
csharp/Callibri/CallibriDemo/: Program.cs
iOS/swift/BrainBitDemo/: Podfile
iOS/swift/CallibriDemo/: Podfile
python/: .gitignore  sample_brainbit.py  sample_brainbit_emotions.py  sample_brainbit_filters.py  sample_callibri.py  sample_callibri_ecg.py  sample_callibri_emg.py
python/BrainBitDemo/: main.py
python/BrainBitDemo/neuro_impl/: brain_bit_controller.py  spectrum_controller.py
react-native/NeuroDemo/: App.js  README.md  app.json  index.js  package-lock.json  package.json
react-native/NeuroDemo/UIComponents/: DeviceListItem.js  DeviceStatusBar.js  FlatButton.js  Separator.js  SignalLabel.js
react-native/NeuroDemo/android/: build.gradle  settings.gradle
react-native/NeuroDemo/ios/: Podfile
react-native/NeuroDemo/neuro_impl/: ScannerImpl.ts  SensorImpl.ts  SensorManager.ts
react-native/NeuroDemo/screens/: DeviceSearchScreen.js  HomeScreen.js  InfoScreen.js  ResistanceScreen.js  SignalScreen.js
react-native/brainbit/: app.json  package.json
react-native/brainbit/NeuroImpl/: BrainBitController.ts
react-native/brainbit/Screens/: InfoScreen.tsx  ResistanceScreen.tsx  SearchScreen.tsx  SignalScreen.tsx
react-native/brainbit/android/: settings.gradle
react-native/brainbit/ios/: Podfile
react-native/brainbit2/: App.tsx  app.json  package.json
react-native/brainbit2/NeuroImpl/: BrainBitController.ts
react-native/brainbit2/Screens/: InfoScreen.tsx  MainScreen.tsx  ResistanceScreen.tsx  SignalScreen.tsx
react-native/brainbit2/android/: settings.gradle
react-native/brainbit2/ios/: Podfile
react-native/callibri/: App.tsx  app.json  package.json
react-native/callibri/NeuroImpl/: CallibriController.ts
react-native/callibri/Screens/: ECGScreen.tsx  EDAScreen.tsx  EnvelopeScreen.tsx  InfoScreen.tsx  MainScreen.tsx  SearchScreen.tsx  SignalScreen.tsx  TenzoScreen.tsx
react-native/callibri/android/: settings.gradle
react-native/callibri/ios/: Podfile
react-native/neuro_eeg/: App.tsx  app.json  package.json
react-native/neuro_eeg/NeuroImpl/: NeuroEEGController.ts
react-native/neuro_eeg/Screens/: InfoScreen.tsx  MainScreen.tsx  ResistanceScreen.tsx  SearchScreen.tsx  SignalResistScreen.tsx  SignalScreen.tsx
react-native/neuro_eeg/android/: settings.gradle
react-native/neuro_eeg/ios/: Podfile
unity/brainbit/ProjectSettings/: ProjectSettings.asset
unity/callibri/ProjectSettings/: ProjectSettings.asset
xamarin/BrainBit/: BrainBitDemo.sln
xamarin/Callibri/: CallibriDemo.sln
xamarin/NeuroDemo/: NeuroDemo.sln
(+311 files in other folders)
